--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ ul {
 .search-box {
        transform: 0.5s;
        background: none;
-				width: 500px;
+				width: 600px;
 				font-size: 17px;
 				border: none;
 				border-bottom:#158cff 2px solid;
@@ -325,4 +325,33 @@ ul {
        transform: 0.5s;
 				border-bottom: #a4b6da 2px solid;
 				
+}
+
+.email-input {
+				width: 500px;
+				border: none;
+				border-bottom:#158cff 2px solid;
+				background: none;
+				font-size: 20px;
+				outline: none;
+				font-family: "Poppins", sans-serif;
+}
+
+.message {
+				width: 500px;
+				height: 200px;
+				background: none;
+				outline: none;
+				font-family: "Poppins", sans-serif;
+				border-radius: 5px;
+				font-size: 20px;
+}
+
+#my-form-button {
+				font-family: "Poppins", sans-serif;
+				background-color: #158cff;
+				border: none;
+				border-radius: 5px;
+				padding: 10px;
+				font-size: 20;
 }
