--- a/style.css
+++ b/style.css
@@ -355,3 +355,32 @@ ul {
 				padding: 10px;
 				font-size: 20;
 }
+
+.email-input {
+				width: 500px;
+				border: none;
+				border-bottom:#158cff 2px solid;
+				background: none;
+				font-size: 20px;
+				outline: none;
+				font-family: "Poppins", sans-serif;
+}
+
+.message {
+				width: 500px;
+				height: 200px;
+				background: none;
+				outline: none;
+				font-family: "Poppins", sans-serif;
+				border-radius: 5px;
+				font-size: 20px;
+}
+
+#my-form-button {
+				font-family: "Poppins", sans-serif;
+				background-color: #158cff;
+				border: none;
+				border-radius: 5px;
+				padding: 10px;
+				font-size: 20;
+}
