--- a/style.css
+++ b/style.css
@@ -385,6 +385,7 @@ ul {
   width: 300px;
   height: 200px;
   animation: none;
+  color: white;
 }
 
 
@@ -459,7 +460,48 @@ ul {
 
 .thumbnail {
   max-width: 300px;
-  max-height: 200px;
+}
+
+.thumbnail2 {
+  max-width: 450px;
+}
+
+.aircraft {
+  height: calc(110vh - 15rem);
+  width: 1100px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.4);
+  text-align: left;
+}
+p {
+  width: 300px;
+  margin-top: 115px;
+}
+
+.info2 {
+  width: 300px;
+  margin-top: 93px;
+}
+
+#links {
+  width: 300px;
+  margin-top: 10px;
+  font-size: 20px;
+}
+
+.Downloads {
+  font-size: 30px;
+}
+
+.Installer {
+  background: #1179e7;
+  padding: 7px;
+  border: none;
+  border-radius: 5px;
+  margin-left: 7px;
 }
 
 /*hover*/
