--- a/style.css
+++ b/style.css
@@ -463,28 +463,38 @@ ul {
 }
 
 .thumbnail2 {
-  max-width: 450px;
+  max-width: 500px;
+  float: left;
+  margin: 10px;
 }
 
-.aircraft {
-  height: calc(110vh - 15rem);
-  width: 1100px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.4);
+.info1 {
   text-align: left;
-}
-p {
   width: 300px;
-  margin-top: 115px;
+  margin: 10px;
+  border-bottom: #28313b solid 1px;
+  border-top: #28313b solid 1px;
+  float: left;
+  font-size: 15px;
 }
 
 .info2 {
+  text-align: left;
   width: 300px;
-  margin-top: 93px;
+  margin: 10px;
+  border-bottom: #28313b solid 1px;
+  border-top: #28313b solid 1px;
+  float: left;
+  font-size: 15px;
 }
+
+.aircraft-info {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 1000px;
+  height: 500px;
+}
+
+
 
 #links {
   width: 300px;
@@ -492,17 +502,6 @@ p {
   font-size: 20px;
 }
 
-.Downloads {
-  font-size: 30px;
-}
-
-.Installer {
-  background: #1179e7;
-  padding: 7px;
-  border: none;
-  border-radius: 5px;
-  margin-left: 7px;
-}
 
 /*hover*/
 .aircraft-tile :hover {
@@ -535,3 +534,4 @@ p {
       box-shadow: 0 0 0 0 rgba(204,169,44, 0);
   }
 }
+
