--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body,
 button {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif, 'Ionicons';
 }
 
 .container {
@@ -491,10 +491,41 @@ ul {
 .aircraft-info {
   background-color: rgba(0, 0, 0, 0.5);
   width: 1000px;
-  height: 500px;
+  height: 285px;
 }
 
+.aircraft-download {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 1000px;
+  height: 270px;
+}
 
+.download-header {
+  font-size: 25px;
+  margin-top: 10px;
+  border-bottom: #28313b solid 1px;
+}
+
+.installers {
+  margin-top: 10px;
+}
+
+.installer-header {
+  font-size: 15px;
+  margin-bottom: 5px;
+}
+
+.help {
+  margin-top: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 1000px;
+  height: 50px;
+}
+
+.help-header {
+  padding-top: 10px;
+  color: white;
+}
 
 #links {
   width: 300px;
@@ -535,3 +566,487 @@ ul {
   }
 }
 
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+/* psuedo element animations */
+@-webkit-keyframes downloadBounce {
+  to {
+    -webkit-transform: translateY(0px) rotate(50deg);
+  }
+}
+@-moz-keyframes downloadBounce {
+  to {
+    -moz-transform: translateY(0px) rotate(50deg);
+  }
+}
+@keyframes downloadBounce {
+  to {
+    -webkit-transform: translateY(0px) rotate(50deg);
+    -moz-transform: translateY(0px) rotate(50deg);
+    -ms-transform: translateY(0px) rotate(50deg);
+    -o-transform: translateY(0px) rotate(50deg);
+    transform: translateY(0px) rotate(50deg);
+  }
+}
+@-webkit-keyframes downloadBounce2 {
+  to {
+    -webkit-transform: translateY(0px) rotate(-50deg);
+  }
+}
+@-moz-keyframes downloadBounce2 {
+  to {
+    -moz-transform: translateY(0px) rotate(-50deg);
+  }
+}
+@keyframes downloadBounce2 {
+  to {
+    -webkit-transform: translateY(0px) rotate(-50deg);
+    -moz-transform: translateY(0px) rotate(-50deg);
+    -ms-transform: translateY(0px) rotate(-50deg);
+    -o-transform: translateY(0px) rotate(-50deg);
+    transform: translateY(0px) rotate(-50deg);
+  }
+}
+body {
+  -webkit-font-smoothing: antialiased;
+}
+
+a {
+  text-decoration: none;
+}
+
+.download {
+  /* rounded corner overflow mask fix */
+  -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
+  overflow: hidden;
+  border-radius: 5px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: #007ccd;
+  border: 2px solid #007ccd;
+  color: white;
+  padding: 26px 0 26px 28px;
+  width: 180px;
+  display: inline-block;
+  position: relative;
+  -webkit-transition: all 300ms ease;
+  -moz-transition: all 300ms ease;
+  transition: all 300ms ease;
+}
+.download span {
+  display: block;
+  position: relative;
+  z-index: 1;
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+.download span:after, .download span:before {
+  content: "";
+  width: 1px;
+  height: 16px;
+  background: #007ccd;
+  opacity: 0;
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  -webkit-transition: all 10ms ease-out;
+  -moz-transition: all 10ms ease-out;
+  transition: all 10ms ease-out;
+  -webkit-transform-origin: center bottom;
+  -moz-transform-origin: center bottom;
+  -ms-transform-origin: center bottom;
+  -o-transform-origin: center bottom;
+  transform-origin: center bottom;
+  -webkit-transform: translateY(0) rotate(0deg);
+  -moz-transform: translateY(0) rotate(0deg);
+  -ms-transform: translateY(0) rotate(0deg);
+  -o-transform: translateY(0) rotate(0deg);
+  transform: translateY(0) rotate(0deg);
+  -webkit-animation: 0;
+  -moz-animation: 0;
+  animation: 0;
+}
+.download svg {
+  z-index: 0;
+  fill: white;
+  position: absolute;
+  left: 20%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%) rotate(0deg) scale(0.04857);
+  -moz-transform: translate(-50%, -50%) rotate(0deg) scale(0.04857);
+  -ms-transform: translate(-50%, -50%) rotate(0deg) scale(0.04857);
+  -o-transform: translate(-50%, -50%) rotate(0deg) scale(0.04857);
+  transform: translate(-50%, -50%) rotate(0deg) scale(0.04857);
+  -webkit-transition: all 350ms ease-out;
+  -moz-transition: all 350ms ease-out;
+  transition: all 350ms ease-out;
+  height: 700px;
+}
+.download svg#linux {
+  -webkit-transform: translate(-50%, -50%) rotate(0deg) scale(0.05857);
+  -moz-transform: translate(-50%, -50%) rotate(0deg) scale(0.05857);
+  -ms-transform: translate(-50%, -50%) rotate(0deg) scale(0.05857);
+  -o-transform: translate(-50%, -50%) rotate(0deg) scale(0.05857);
+  transform: translate(-50%, -50%) rotate(0deg) scale(0.05857);
+}
+.download:hover {
+  padding: 26px 0;
+  color: #007ccd;
+}
+.download:hover svg {
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) rotate(60deg) scale(1);
+  -moz-transform: translate(-50%, -50%) rotate(60deg) scale(1);
+  -ms-transform: translate(-50%, -50%) rotate(60deg) scale(1);
+  -o-transform: translate(-50%, -50%) rotate(60deg) scale(1);
+  transform: translate(-50%, -50%) rotate(60deg) scale(1);
+}
+.download:hover svg#windows {
+  -webkit-transform: translate(-50%, -10%) rotate(60deg) scale(1);
+  -moz-transform: translate(-50%, -10%) rotate(60deg) scale(1);
+  -ms-transform: translate(-50%, -10%) rotate(60deg) scale(1);
+  -o-transform: translate(-50%, -10%) rotate(60deg) scale(1);
+  transform: translate(-50%, -10%) rotate(60deg) scale(1);
+}
+.download:hover svg#linux {
+  -webkit-transform: translate(-120%, -125%) rotate(60deg) scale(6);
+  -moz-transform: translate(-120%, -125%) rotate(60deg) scale(6);
+  -ms-transform: translate(-120%, -125%) rotate(60deg) scale(6);
+  -o-transform: translate(-120%, -125%) rotate(60deg) scale(6);
+  transform: translate(-120%, -125%) rotate(60deg) scale(6);
+}
+.download:hover span {
+  -webkit-transform: translate(0, -10px) scale(1.1);
+  -moz-transform: translate(0, -10px) scale(1.1);
+  -ms-transform: translate(0, -10px) scale(1.1);
+  -o-transform: translate(0, -10px) scale(1.1);
+  transform: translate(0, -10px) scale(1.1);
+  -webkit-transition: -webkit-transform 400ms ease-out 400ms;
+  -moz-transition: -moz-transform 400ms ease-out 400ms;
+  transition: transform 400ms ease-out 400ms;
+}
+.download:hover span:after, .download:hover span:before {
+  opacity: 1;
+  -webkit-transition: all 400ms ease-out 400ms, -webkit-transform 300ms ease-in 100ms;
+  -moz-transition: all 400ms ease-out 400ms, -moz-transform 300ms ease-in 100ms;
+  transition: all 400ms ease-out 400ms, transform 300ms ease-in 100ms;
+}
+.download:hover span:after {
+  -webkit-transform: translateY(7px) rotate(50deg);
+  -moz-transform: translateY(7px) rotate(50deg);
+  -ms-transform: translateY(7px) rotate(50deg);
+  -o-transform: translateY(7px) rotate(50deg);
+  transform: translateY(7px) rotate(50deg);
+  -webkit-animation: downloadBounce 800ms linear alternate infinite;
+  -moz-animation: downloadBounce 800ms linear alternate infinite;
+  animation: downloadBounce 800ms linear alternate infinite;
+}
+.download:hover span:before {
+  -webkit-transform: translateY(7px) rotate(-50deg);
+  -moz-transform: translateY(7px) rotate(-50deg);
+  -ms-transform: translateY(7px) rotate(-50deg);
+  -o-transform: translateY(7px) rotate(-50deg);
+  transform: translateY(7px) rotate(-50deg);
+  -webkit-animation: downloadBounce2 800ms linear alternate infinite;
+  -moz-animation: downloadBounce2 800ms linear alternate infinite;
+  animation: downloadBounce2 800ms linear alternate infinite;
+}
+
+.button.dark-single {
+  --background: none;
+  --rectangle: #242836;
+  --success: #4BC793;
+}
+.button.white-single {
+  --background: none;
+  --rectangle: #F5F9FF;
+  --arrow: #275efe;
+  --success: #275efe;
+  --shadow: rgba(10, 22, 50, .1);
+}
+.button.dark {
+  --background: #242836;
+  --rectangle: #1C212E;
+  --arrow: #F5F9FF;
+  --text: #F5F9FF;
+  --success: #2F3545;
+}
+
+.button {
+  --background: #007ccd;
+  --rectangle: rgb(34, 74, 194);
+  --success: #2a5cf1;
+  --text: #fff;
+  --arrow: #fff;
+  --checkmark: #fff;
+  --shadow: rgba(10, 22, 50, .24);
+  display: flex;
+  overflow: hidden;
+  text-decoration: none;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
+  background: var(--background);
+  border-radius: 8px;
+  box-shadow: 0 2px 8px -1px var(--shadow);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  width: 220px;
+  margin-left: 390px;
+}
+.button:active {
+  transform: scale(0.95);
+  box-shadow: 0 1px 4px -1px var(--shadow);
+}
+.button ul {
+  margin: 0;
+  padding: 16px 40px;
+  list-style: none;
+  text-align: center;
+  position: relative;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 28px;
+  color: var(--text);
+}
+.button ul li:not(:first-child) {
+  top: 16px;
+  left: 0;
+  right: 0;
+  position: absolute;
+}
+.button ul li:nth-child(2) {
+  top: 76px;
+}
+.button ul li:nth-child(3) {
+  top: 136px;
+}
+.button > div {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background: var(--rectangle);
+}
+.button > div:before, .button > div:after {
+  content: "";
+  display: block;
+  position: absolute;
+}
+.button > div:before {
+  border-radius: 1px;
+  width: 2px;
+  top: 50%;
+  left: 50%;
+  height: 17px;
+  margin: -9px 0 0 -1px;
+  background: var(--arrow);
+}
+.button > div:after {
+  width: 60px;
+  height: 60px;
+  transform-origin: 50% 0;
+  border-radius: 0 0 80% 80%;
+  background: var(--success);
+  top: 0;
+  left: 0;
+  transform: scaleY(0);
+}
+.button > div svg {
+  display: block;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 50%;
+  top: 50%;
+  margin: -9px 0 0 -10px;
+  fill: none;
+  z-index: 1;
+  stroke-width: 2px;
+  stroke: var(--arrow);
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+.button.loading ul {
+  -webkit-animation: text calc(var(--duration) * 1ms) linear forwards calc(var(--duration) * .065ms);
+          animation: text calc(var(--duration) * 1ms) linear forwards calc(var(--duration) * .065ms);
+}
+.button.loading > div:before {
+  -webkit-animation: line calc(var(--duration) * 1ms) linear forwards calc(var(--duration) * .065ms);
+          animation: line calc(var(--duration) * 1ms) linear forwards calc(var(--duration) * .065ms);
+}
+.button.loading > div:after {
+  -webkit-animation: background calc(var(--duration) * 1ms) linear forwards calc(var(--duration) * .065ms);
+          animation: background calc(var(--duration) * 1ms) linear forwards calc(var(--duration) * .065ms);
+}
+.button.loading > div svg {
+  -webkit-animation: svg calc(var(--duration) * 1ms) linear forwards calc(var(--duration) * .065ms);
+          animation: svg calc(var(--duration) * 1ms) linear forwards calc(var(--duration) * .065ms);
+}
+
+@-webkit-keyframes text {
+  10%, 85% {
+    transform: translateY(-100%);
+  }
+  95%, 100% {
+    transform: translateY(-200%);
+  }
+}
+
+@keyframes text {
+  10%, 85% {
+    transform: translateY(-100%);
+  }
+  95%, 100% {
+    transform: translateY(-200%);
+  }
+}
+@-webkit-keyframes line {
+  5%, 10% {
+    transform: translateY(-30px);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  65% {
+    transform: translateY(0);
+  }
+  75%, 100% {
+    transform: translateY(30px);
+  }
+}
+@keyframes line {
+  5%, 10% {
+    transform: translateY(-30px);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  65% {
+    transform: translateY(0);
+  }
+  75%, 100% {
+    transform: translateY(30px);
+  }
+}
+@-webkit-keyframes svg {
+  0%, 20% {
+    stroke-dasharray: 0;
+    stroke-dashoffset: 0;
+  }
+  21%, 89% {
+    stroke-dasharray: 26px;
+    stroke-dashoffset: 26px;
+    stroke-width: 3px;
+    margin: -10px 0 0 -10px;
+    stroke: var(--checkmark);
+  }
+  100% {
+    stroke-dasharray: 26px;
+    stroke-dashoffset: 0;
+    margin: -10px 0 0 -10px;
+    stroke: var(--checkmark);
+  }
+  12% {
+    opacity: 1;
+  }
+  20%, 89% {
+    opacity: 0;
+  }
+  90%, 100% {
+    opacity: 1;
+  }
+}
+@keyframes svg {
+  0%, 20% {
+    stroke-dasharray: 0;
+    stroke-dashoffset: 0;
+  }
+  21%, 89% {
+    stroke-dasharray: 26px;
+    stroke-dashoffset: 26px;
+    stroke-width: 3px;
+    margin: -10px 0 0 -10px;
+    stroke: var(--checkmark);
+  }
+  100% {
+    stroke-dasharray: 26px;
+    stroke-dashoffset: 0;
+    margin: -10px 0 0 -10px;
+    stroke: var(--checkmark);
+  }
+  12% {
+    opacity: 1;
+  }
+  20%, 89% {
+    opacity: 0;
+  }
+  90%, 100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes background {
+  10% {
+    transform: scaleY(0);
+  }
+  40% {
+    transform: scaleY(0.15);
+  }
+  65% {
+    transform: scaleY(0.5);
+    border-radius: 0 0 50% 50%;
+  }
+  75% {
+    border-radius: 0 0 50% 50%;
+  }
+  90%, 100% {
+    border-radius: 0;
+  }
+  75%, 100% {
+    transform: scaleY(1);
+  }
+}
+@keyframes background {
+  10% {
+    transform: scaleY(0);
+  }
+  40% {
+    transform: scaleY(0.15);
+  }
+  65% {
+    transform: scaleY(0.5);
+    border-radius: 0 0 50% 50%;
+  }
+  75% {
+    border-radius: 0 0 50% 50%;
+  }
+  90%, 100% {
+    border-radius: 0;
+  }
+  75%, 100% {
+    transform: scaleY(1);
+  }
+}
+html {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
+
+* {
+  box-sizing: inherit;
+}
+*:before, *:after {
+  box-sizing: inherit;
+}
+
+body .dribbble {
+  position: fixed;
+  display: block;
+  right: 20px;
+  bottom: 20px;
+}
+body .dribbble img {
+  display: block;
+  height: 28px;
+}
