--- a/style.css
+++ b/style.css
@@ -500,6 +500,22 @@ ul {
   height: 270px;
 }
 
+.help-desk {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 1000px;
+  height: 500px;
+}
+
+.help-index {
+  border-bottom: #28313b solid 1px;
+  border-top: #28313b solid 1px;
+}
+
+.index-header-help-page {
+  font-size: 20px;
+  border-bottom: #28313b solid 1px;
+}
+
 .download-header {
   font-size: 25px;
   margin-top: 10px;
@@ -1049,4 +1065,52 @@ body .dribbble {
 body .dribbble img {
   display: block;
   height: 28px;
+}
+
+/*r-btn start*/
+
+button {
+  cursor: pointer;
+  margin: 10px;
+  position: relative;
+  overflow: hidden;
+  padding: 15px 30px;
+  font-size: 20px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: white;
+  transition: 0.2s;
+  border-bottom: #28313b 1px solid;
+}
+button::before {
+  content: "";
+  height: 3px;
+  width: 0;
+  left: 0;
+  bottom: 0;
+  position: absolute;
+  background: white;
+  transition: 0.4s;
+}
+button:hover::before {
+  width: 100%;
+}
+button:active {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+span.ripple {
+  background-color: rgba(0, 190, 255, 0.7);
+  border-radius: 50%;
+  position: absolute;
+  transform: scale(0);
+  animation: ripple 0.5s linear forwards;
+}
+
+@keyframes ripple {
+  to {
+    transform: scale(1);
+    opacity: 0;
+  }
 }
